--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
