--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,21 @@
-PORT=
+APP_DOMAIN=
+APP_PORT=
 MONGODB_USER=
 MONGODB_PASSWORD=
 MONGODB_URL=
 MONGODB_DB=
+
 SALT=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
+
+CLOUDINARY_CLOUD_NAME=dg5fttpzf
+CLOUDINARY_API_KEY=169746224556499
+CLOUDINARY_API_SECRET=8o03MwqFHamK8YWVVx-ujNqV6Ic
+
+JWT_SECRET=
+
