remove data from .env.example

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ SMTP_USER=
 SMTP_PASSWORD=
 SMTP_FROM=
 
-CLOUDINARY_CLOUD_NAME=dg5fttpzf
-CLOUDINARY_API_KEY=169746224556499
-CLOUDINARY_API_SECRET=8o03MwqFHamK8YWVVx-ujNqV6Ic
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 
 JWT_SECRET=
 
