--- a/swagger/components/schemas/contact.yaml
+++ b/swagger/components/schemas/contact.yaml
@@ -1,41 +1,44 @@
 type: object
 required:
-  - _id
   - name
   - phoneNumber
   - contactType
-  - userId
 properties:
   name:
-    description: "Contact's name"
+    description: 'The full name of the contact'
     type: string
     example: 'Nik Brook'
+
   phoneNumber:
-    description: "Contacts's age"
+    description: "The contact's phone number"
     type: string
     example: '+38000000899'
+
   email:
-    description: "Contact's email"
+    description: "The contact's email address"
     type: string
     example: 'nik@example.com'
+
   isFavorite:
-    description: 'Whether is contact in Favorite'
+    description: 'Indicates whether the contact is marked as a favorite'
     type: boolean
     example: false
+
   contactType:
-    description: "Contact's type"
+    description: 'The category of the contact (e.g., work, home, personal)'
     type: string
-    enum: ['work', 'home', 'personal']
-    example: personal
+    enum:
+      - work
+      - home
+      - personal
+    example: 'personal'
+
   userId:
-    description: "Contact's user Id"
+    description: 'The ID of the user who owns this contact'
     type: string
-    example: 66cb5ed80318528063e77c87
+    example: '66cb5ed80318528063e77c87'
+
   photo:
-    description: "Link to contact's photo"
+    description: "URL to the contact's photo"
     type: string
-    example: https://res.cloudinary.com/dg5fttpzf/image/upload/v1724604273/vnytdl8f8xwylaaaud6b.jpg
-  _id:
-    description: "Contact's id"
-    type: string
-    example: 66cb5f4d0318528063e77c98
+    example: 'https://res.cloudinary.com/dg5fttpzf/image/upload/v1724604273/vnytdl8f8xwylaaaud6b.jpg'
