added refresh logout login register endpoins in swagger

--- a/swagger/components/responses/400.yaml
+++ b/swagger/components/responses/400.yaml
@@ -25,4 +25,4 @@ content:
               example: 'Bad request, body parameters are incorrect'
             errors:
               type: string
-              example: 'name is required'
+              example: 'Field is required'
