--- a/swagger/paths/auth/login/post.yaml
+++ b/swagger/paths/auth/login/post.yaml
@@ -1,13 +1,28 @@
 tags:
   - Auth
-summary: User login in
+summary: User Login
 operationId: loginUser
-description: 'Login a user'
-security:
-  - bearerAuth: []
+description: |
+  **User Login**
+
+  This endpoint allows registered users to log in to their account by providing their email and password.
+
+  ### Required Fields
+  - **Email**: The email address associated with the user's account.
+  - **Password**: The password for the user's account.
+
+  ### How to Use
+  - **Email**: Enter the email address used during registration.
+  - **Password**: Provide the password associated with the email address.
+
+  Upon successful login, the response will include an access token that can be used to authenticate further requests.
+
+  ### Security
+  - This endpoint does not require authentication for accessing the login functionality.
+security: []
 requestBody:
   content:
-    application/json:
+    application/x-www-form-urlencoded: # Change to form format
       schema:
         type: object
         required:
@@ -15,17 +30,21 @@ requestBody:
           - password
         properties:
           email:
-            description: "User's email"
             type: string
+            description: "The email address associated with the user's account."
             example: 'userone@example.com'
           password:
-            description: "User's password"
             type: string
+            description: "The password for the user's account."
             example: '123Qwe!xX'
 
 responses:
   '200':
-    description: Successfully logged in an user!
+    description: |
+      **Successfully Logged In**
+
+      The login was successful, and an access token has been provided. Use this token for subsequent authenticated requests.
+
     content:
       application/json:
         schema:
@@ -38,9 +57,11 @@ responses:
             status:
               type: integer
               example: 200
+              description: 'HTTP status code indicating a successful login'
             message:
               type: string
-              example: Successfully logged in an user!
+              example: 'Successfully logged in!'
+              description: 'Confirmation message indicating successful login'
             data:
               type: object
               required:
@@ -48,7 +69,5 @@ responses:
               properties:
                 accessToken:
                   type: string
-                  example: rq+GxElZ5o1qmL42xcxm+77ijgXajMg34lLc23My
-
-  '401':
-    $ref: ../../../components/responses/401.yaml
+                  example: 'rq+GxElZ5o1qmL42xcxm+77ijgXajMg34lLc23My'
+                  description: 'The access token to be used for authenticated requests'
