--- a/swagger/paths/contacts/get.yaml
+++ b/swagger/paths/contacts/get.yaml
@@ -181,81 +181,7 @@ responses:
                   description: Whether there are pages available before the current page
 
   '401':
-    description: Unauthorized - Authentication required or invalid token.
-    content:
-      application/json:
-        schema:
-          type: object
-          required:
-            - status
-            - message
-            - data
-          properties:
-            status:
-              type: integer
-              example: 401
-            message:
-              type: string
-              example: UnauthorizedError
-            data:
-              type: object
-              properties:
-                message:
-                  type: string
-                  example: 'User not authorized'
-              additionalProperties: false
-        examples:
-          no_token:
-            summary: User not authorized
-            value:
-              status: 401
-              message: UnauthorizedError
-              data:
-                message: User not authorized
-          token_expired:
-            summary: Access token expired
-            value:
-              status: 401
-              message: UnauthorizedError
-              data:
-                message: Access token expired
+    $ref: ../../components/responses/401.yaml
 
   '404':
-    description: Not Found - Session or Authorization header not found.
-    content:
-      application/json:
-        schema:
-          type: object
-          required:
-            - status
-            - message
-            - data
-          properties:
-            status:
-              type: integer
-              example: 404
-            message:
-              type: string
-              example: NotFoundError
-            data:
-              type: object
-              properties:
-                message:
-                  type: string
-                  example: 'Session not found'
-              additionalProperties: false
-        examples:
-          no_token:
-            summary: Session not found
-            value:
-              status: 404
-              message: NotFoundError
-              data:
-                message: Session not found
-          token_expired:
-            summary: Authorization header not found
-            value:
-              status: 404
-              message: NotFoundError
-              data:
-                message: Authorization header not found
+    $ref: ../../components/responses/404.yaml
