--- a/swagger/components/responses/404.yaml
+++ b/swagger/components/responses/404.yaml
@@ -1,4 +1,4 @@
-description: NotFound error
+description: Not Found - Session or Authorization header not found
 content:
   application/json:
     schema:
@@ -11,9 +11,11 @@ content:
         status:
           type: integer
           example: 404
+          description: HTTP status code
         message:
           type: string
           example: NotFoundError
+          description: Error message indicating that the resource was not found
         data:
           type: object
           required:
@@ -21,4 +23,21 @@ content:
           properties:
             message:
               type: string
-              example: 'Entity not found'
+              example: 'Session not found'
+              description: Detailed message about the missing session or header
+          additionalProperties: false
+    examples:
+      no_token:
+        summary: Session not found
+        value:
+          status: 404
+          message: NotFoundError
+          data:
+            message: Session not found
+      token_expired:
+        summary: Authorization header not found
+        value:
+          status: 404
+          message: NotFoundError
+          data:
+            message: Authorization header not found
