--- a/swagger/paths/contacts/{contactId}/delete.yaml
+++ b/swagger/paths/contacts/{contactId}/delete.yaml
@@ -63,55 +63,7 @@ responses:
                   description: 'Detailed error message'
 
   '401':
-    description: |
-      **Unauthorized**
-
-      Authentication is required or the provided token is invalid.
-
-      - **message**: Detailed message about the authorization issue.
-
-    content:
-      application/json:
-        schema:
-          type: object
-          required:
-            - status
-            - message
-            - data
-          properties:
-            status:
-              type: integer
-              example: 401
-              description: 'HTTP status code indicating unauthorized access'
-            message:
-              type: string
-              example: UnauthorizedError
-              description: 'Error message indicating authentication issues'
-            data:
-              type: object
-              required:
-                - message
-              properties:
-                message:
-                  type: string
-                  example: 'User not authorized'
-                  description: 'Detailed message about the authorization issue'
-              additionalProperties: false
-        examples:
-          no_token:
-            summary: User not authorized
-            value:
-              status: 401
-              message: UnauthorizedError
-              data:
-                message: User not authorized
-          token_expired:
-            summary: Access token expired
-            value:
-              status: 401
-              message: UnauthorizedError
-              data:
-                message: Access token expired
+    $ref: ../../../components/responses/401.yaml
 
   '404':
     description: |
@@ -147,38 +99,3 @@ responses:
                   type: string
                   example: 'Contact not found'
                   description: 'Detailed message about the missing contact'
-
-  '500':
-    description: |
-      **Internal Server Error**
-
-      An unexpected error occurred on the server side. Please try again later.
-
-      - **message**: Detailed error message.
-
-    content:
-      application/json:
-        schema:
-          type: object
-          required:
-            - status
-            - message
-            - data
-          properties:
-            status:
-              type: integer
-              example: 500
-              description: 'HTTP status code indicating an internal server error'
-            message:
-              type: string
-              example: InternalServerError
-              description: 'Error message indicating an internal server issue'
-            data:
-              type: object
-              required:
-                - message
-              properties:
-                message:
-                  type: string
-                  example: 'Failed to delete contact, please try again later.'
-                  description: 'Detailed error message'
