--- a/swagger/paths/contacts/{contactId}/patch.yaml
+++ b/swagger/paths/contacts/{contactId}/patch.yaml
@@ -111,6 +111,49 @@ responses:
                       example: '2024-08-29T20:39:40.775Z'
                       description: 'The date and time when the contact was last updated'
 
+  '201':
+    description: |
+      **Contact Successfully Created**
+
+      A new contact was created as part of the update process. The response includes details of the newly created contact.
+
+      - **_id**: Unique identifier for the created contact.
+      - **createdAt**: Timestamp when the contact was created.
+      - **updatedAt**: Timestamp when the contact was last updated.
+
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            status:
+              type: integer
+              example: 201
+              description: 'HTTP status code indicating successful creation'
+            message:
+              type: string
+              example: Successfully created the contact!
+              description: 'Confirmation message indicating successful creation'
+            data:
+              allOf:
+                - $ref: '../../../components/schemas/contact.yaml'
+                - type: object
+                  properties:
+                    _id:
+                      type: string
+                      example: 66cb5f4d0318528063e77c98
+                      description: 'Unique identifier for the created contact'
+                    createdAt:
+                      type: string
+                      format: date-time
+                      example: '2024-08-29T20:39:40.775Z'
+                      description: 'The date and time when the contact was created'
+                    updatedAt:
+                      type: string
+                      format: date-time
+                      example: '2024-08-29T20:39:40.775Z'
+                      description: 'The date and time when the contact was last updated'
+
   '400':
     description: |
       **Bad Request**
@@ -142,7 +185,7 @@ responses:
                   description: 'Detailed error message'
                 errors:
                   type: string
-                  example: "'name' is a required field; 'phoneNumber' is a required field; 'contactType' is a required field"
+                  example: "'name' should be more then 2 character ; 'phoneNumber' should be more then 2 character ; 'contactType' must be true or false"
                   description: 'List of validation errors'
           required:
             - status
@@ -150,63 +193,13 @@ responses:
             - data
 
   '401':
-    description: |
-      **Unauthorized**
-
-      Authentication is required or the provided token is invalid.
-
-      - **message**: Detailed message about the authorization issue.
-
-    content:
-      application/json:
-        schema:
-          type: object
-          required:
-            - status
-            - message
-            - data
-          properties:
-            status:
-              type: integer
-              example: 401
-              description: 'HTTP status code indicating unauthorized access'
-            message:
-              type: string
-              example: UnauthorizedError
-              description: 'Error message indicating authentication issues'
-            data:
-              type: object
-              required:
-                - message
-              properties:
-                message:
-                  type: string
-                  example: 'User not authorized'
-                  description: 'Detailed message about the authorization issue'
-              additionalProperties: false
-        examples:
-          no_token:
-            summary: User not authorized
-            value:
-              status: 401
-              message: UnauthorizedError
-              data:
-                message: User not authorized
-          token_expired:
-            summary: Access token expired
-            value:
-              status: 401
-              message: UnauthorizedError
-              data:
-                message: Access token expired
+    $ref: ../../../components/responses/401.yaml
 
   '404':
     description: |
-      **Not Found**
+      **Contact Not Found**
 
-      The session or Authorization header was not found. Verify that the required session or header is included.
-
-      - **message**: Detailed message about the missing session or header.
+      The provided `contactId` does not match any existing contact.
 
     content:
       application/json:
@@ -220,36 +213,18 @@ responses:
             status:
               type: integer
               example: 404
-              description: 'HTTP status code indicating that the resource was not found'
             message:
               type: string
-              example: NotFoundError
-              description: 'Error message indicating that the resource was not found'
+              example: 'NotFoundError'
             data:
               type: object
               required:
                 - message
+                - errors
               properties:
                 message:
                   type: string
-                  example: 'Session not found'
-                  description: 'Detailed message about the missing session or header'
-              additionalProperties: false
-        examples:
-          no_token:
-            summary: Session not found
-            value:
-              status: 404
-              message: NotFoundError
-              data:
-                message: Session not found
-          token_expired:
-            summary: Authorization header not found
-            value:
-              status: 404
-              message: NotFoundError
-              data:
-                message: Authorization header not found
+                  example: 'Contact not found'
 
   '500':
     description: |
