--- a/swagger/paths/auth/login/post.yaml
+++ b/swagger/paths/auth/login/post.yaml
@@ -22,7 +22,7 @@ description: |
 security: []
 requestBody:
   content:
-    application/x-www-form-urlencoded: # Change to form format
+    application/x-www-form-urlencoded:
       schema:
         type: object
         required:
